<resources>

    <string name="app_name">My Crews</string>
    <string name="login_name">User Name</string>
    <string name="password_name">Password</string>
    <string name="login_btn">Login</string>
    <string name="logout">Logout</string>
    <string name="allCrews">All Crews</string>
    <string name="myCrews">My Crews</string>
    <string name="myProfile">My Profile</string>

    <string name="search">Search crew...</string>


    <!-- MyProfileActivity & EditMyProfileActivity -->
    <string name="tvUsername">db data goes here</string>
    <string name="tvFirstname">db data goes here</string>
    <string name="tvLastname">db data goes here</string>
    <string name="tvPhoneNumber">db data goes here</string>
    <string name="tvEditInfo">Edit profile settings…</string>
    <string name="tvUsernameLabel">User Tag</string>
    <string name="tvFirstNameLabel">First Name</string>
    <string name="tvLastNameLabel">Last Name</string>
    <string name="tvPhoneNumberLabel">Phone Number</string>
    <string name="etUsername">db data goes here</string>
    <string name="etFirstname">db data goes here</string>
    <string name="etLastname">db data goes here</string>
    <string name="etPhoneNumber">db data goes here</string>

</resources>
