<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.buster.mycrews.CrewProfileActivity">


    <item
        android:id="@+id/myProfile"
        android:orderInCategory="100"
        android:title="@string/myProfile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/myCrews"
        android:orderInCategory="100"
        android:title="@string/myCrews"
        app:showAsAction="never"/>

    <item
        android:id="@+id/allCrews"
        android:orderInCategory="100"
        android:title="@string/allCrews"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
