<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.buster.mycrews.MainActivity">


    <EditText
        android:id="@+id/etLoginName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/login_name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/mvoOrange"
        android:textColorHint="@color/mvoWhite" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/password_name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/mvoOrange"
        android:textColorHint="@color/mvoWhite" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/mvoOrange"
        android:text="@string/login_btn" />


</RelativeLayout>


