<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_profile_activity_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.buster.mycrews.MyProfileActivity">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/my_profile_user_imageview" />

    <ImageButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/imageViewPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageViewPhoto"
        android:layout_below="@+id/imageViewPhoto"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/my_profile_camera_button" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUsername"
        android:textColor="@color/mvoWhite"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:text="@string/tvFirstname"
        android:textColor="@color/mvoWhite"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tvLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFirstname"
        android:text="@string/tvLastname"
        android:textColor="@color/mvoWhite"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLastname"
        android:text="@string/tvEmail"
        android:textColor="@color/mvoWhite"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/btnEditProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageViewPhoto"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/my_profile_edit_button" />


</RelativeLayout>
